--- a/beauty-treatments.html
+++ b/beauty-treatments.html
@@ -199,91 +199,122 @@
                             <div class="services-details-two__img">
                                 <img src="assets/images/My-images/beauty-1.jpg" alt="">
                             </div>
-                            <h3 class="services-details-two__title-1">Beauty Treatment & Waxing</h3>
-                            <p class="services-details-two__text-1">At Asuna Salon, we believe beauty should feel effortless. Our beauty treatments and waxing services are designed to leave your skin smooth, fresh, and glowing—all in the relaxed comfort of our home-based space. From gentle facial care to precision waxing, we ensure a calming and hygienic experience every time.</p>
-                            <p class="services-details-two__text-2">We use high-quality, skin-friendly products to reduce irritation and enhance results. Whether you're prepping for an event or simply treating yourself, our services are tailored to suit your needs and make you feel your absolute best.</p>
-                            <h3 class="services-details-two__title-2">Why Choose Our Beauty Services?</h3>
-                            <p class="services-details-two__text-3">Our treatments not only refine your appearance—they help promote healthy skin, boost confidence, and create a moment of self-care in your day.</p>
-                            <ul class="services-details-two__points list-unstyled">
+
+                            <!-- Main Title -->
+                            <h3 class="services-details-two__title-1">Facials & Skin Treatments</h3>
+                            <p class="services-details-two__text-1">
+                                At Asuna Salon, our expert facials go beyond relaxation—they deeply cleanse, exfoliate, and restore your skin’s natural glow. From blackhead extractions to anti-aging masks, each treatment is tailored to your skin’s unique needs in our calming home-based space.
+                            </p>
+                            <p class="services-details-two__text-2">
+                                We specialize in Crystal Clear Microdermabrasion and targeted facials that address acne, dullness, congestion, and more. Whether you want a quick glow-up or long-term skin care results, our treatments offer visible improvements and a true moment of self-care.
+                            </p>
+
+                            <!-- NEW SECTION: What is Microdermabrasion -->
+                            <h3 class="services-details-two__title-2">What is Crystal Clear Microdermabrasion?</h3>
+                            <p class="services-details-two__text-3">
+                                Crystal Clear Microdermabrasion is a professional exfoliation treatment using ultra-fine aluminium oxide crystals. It removes dead skin cells and impurities while stimulating new cell growth, leaving your skin visibly smoother, brighter, and more refined.
+                            </p>
+
+                            <!-- NEW SECTION: Targeting Blackheads & Acne -->
+                            <h3 class="services-details-two__title-2">Treating Blackheads & Acne</h3>
+                            <p class="services-details-two__text-3">
+                                Blackheads are clogged pores caused by excess oil and dead skin. Our targeted facials combine gentle extraction, active ingredients like salicylic acid, and hydrating masks to clear pores, reduce inflammation, and prevent breakouts—especially for oily or acne-prone skin.
+                            </p>
+
+                            <!-- NEW SECTION: Soothing Sensitive Skin -->
+                            <h3 class="services-details-two__title-2">Gentle Products for Sensitive Skin</h3>
+                            <p class="services-details-two__text-3">
+                                We use Crystal Clear products enriched with cucumber extract, Vitamin C & E, and glycerin—perfect for calming, hydrating, and protecting delicate or reactive skin types. Every treatment is tailored for your skin’s tolerance and comfort.
+                            </p>
+
+                            <!-- NEW SECTION: The Mini Lift Mask -->
+                            <h3 class="services-details-two__title-2">Mini Lift Mask: Instant Firming & Radiance</h3>
+                            <p class="services-details-two__text-3">
+                                Perfect before a big event or as a refreshing boost, the Mini Lift Mask delivers an instant tightening effect while boosting luminosity. It smooths fine lines, firms the skin, and enhances your natural glow in just one session.
+                            </p>
+
+                            <!-- BENEFITS SECTION -->
+                            <h3 class="services-details-two__title-2">Why Your Skin Loves Our Facials</h3>
+                            <ul style="margin-bottom: 37px; margin-top: 26px;" class="services-details-two__points list-unstyled">
                                 <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>Professional waxing with minimal discomfort.</p>
-                                    </div>
+                                    <div class="icon"><span class="fa fa-check"></span></div>
+                                    <div class="text"><p>Deep cleansing to unclog pores and remove impurities</p></div>
                                 </li>
                                 <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>Facial care that hydrates, cleanses, and refreshes.</p>
-                                    </div>
+                                    <div class="icon"><span class="fa fa-check"></span></div>
+                                    <div class="text"><p>Targets acne, blackheads, and uneven texture</p></div>
                                 </li>
                                 <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>Private, peaceful setting with personalized care.</p>
-                                    </div>
+                                    <div class="icon"><span class="fa fa-check"></span></div>
+                                    <div class="text"><p>Boosts hydration and skin elasticity</p></div>
                                 </li>
                                 <li>
-                                    <div class="icon">
-                                        <span class="fa fa-check"></span>
-                                    </div>
-                                    <div class="text">
-                                        <p>Perfect for maintaining smooth, radiant skin.</p>
-                                    </div>
+                                    <div class="icon"><span class="fa fa-check"></span></div>
+                                    <div class="text"><p>Stimulates circulation for a radiant glow</p></div>
+                                </li>
+                                <li>
+                                    <div class="icon"><span class="fa fa-check"></span></div>
+                                    <div class="text"><p>Customized for all skin types, including sensitive skin</p></div>
                                 </li>
                             </ul>
+
+                            <!-- FAQ Section -->
+                            <h3 class="services-details-two__title-2">Frequently Asked Questions</h3>
                             <div class="services-details-two__faq">
                                 <div class="accrodion-grp" data-grp-name="faq-one-accrodion">
-                                    <div class="accrodion">
-                                        <div class="accrodion-title">
-                                            <h4>Is waxing painful?</h4>
-                                        </div>
-                                        <div class="accrodion-content">
-                                            <div class="inner">
-                                                <p>We use gentle techniques and soothing products to minimize discomfort. Most clients find the experience quick and manageable.</p>
-                                            </div>
-                                        </div>
-                                    </div>
                                     <div class="accrodion active">
                                         <div class="accrodion-title">
-                                            <h4>Do you offer treatments for sensitive skin?</h4>
+                                            <h4>What does a facial include?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>Yes! We carefully select products suited for sensitive skin and adjust each treatment based on your comfort and needs.</p>
+                                                <p>Each facial includes cleansing, exfoliation, steam (if needed), extraction, a targeted mask, and hydration. We tailor every step to your skin’s needs.</p>
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>How long do waxing results last?</h4>
+                                            <h4>Will facials help with breakouts?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>Waxing typically lasts 3 to 4 weeks, depending on your hair growth cycle. Regular visits help maintain smoother skin longer.</p>
+                                                <p>Yes. Regular facials help manage acne by keeping pores clear and calming inflammation. We also offer treatments specifically designed for breakout-prone skin.</p>
                                             </div>
                                         </div>
                                     </div>
+
                                     <div class="accrodion">
                                         <div class="accrodion-title">
-                                            <h4>Can I combine waxing with other beauty services?</h4>
+                                            <h4>Can I combine a facial with waxing?</h4>
                                         </div>
                                         <div class="accrodion-content">
                                             <div class="inner">
-                                                <p>Absolutely! We’re happy to create a custom session that includes waxing, facials, and more—just let us know your preferences when booking.</p>
+                                                <p>Absolutely! We offer combo appointments for maximum convenience. Just let us know during booking and we’ll tailor the session for you.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="accrodion">
+                                        <div class="accrodion-title">
+                                            <h4>How often should I get a facial?</h4>
+                                        </div>
+                                        <div class="accrodion-content">
+                                            <div class="inner">
+                                                <p>We recommend every 4–6 weeks for best results. For specific concerns like acne or pigmentation, a consistent schedule speeds up results.</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-xl-10">
+                                    <div class="services-two__btn-box">
+                                        <a href="pricing-plans.html" class="thm-btn services-two__btn">Our Pricing</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-
                     </div>
                 </div>
             </div>
