--- a/index.html
+++ b/index.html
@@ -294,9 +294,8 @@
                                         <span class="icon-herbal"></span>
                                     </div>
                                 </div>
-                                <h3 class="services-one__title"><a href="hair-styling.html">Hair Styling</a></h3>
-                                <p class="services-one__text">Experience expert styling that suits your look and lifestyle, delivered with care in our cozy home-based salon.</p>
-
+                                <h3 class="services-one__title"><a href="hair-styling.html">Hair Dressing</a></h3>
+                                <p class="services-one__text">Precision haircuts and expert ash-silver color for Asian and European hair, all in our calm home-based salon.</p>
                                 <div class="services-one__btn-box">
                                     <a href="hair-styling.html" class="services-one__btn">Book now<i
                                             class="icon-right-arrow"></i></a>
